--- a/src/components/header.css
+++ b/src/components/header.css
@@ -65,6 +65,15 @@
   transition: all .5s ease;
 
 }
+
+.header__nav__container ul li a{
+    color: #fff;
+    text-decoration: none;
+    transition: 0.5s;
+}
+.header__nav__container ul li a:hover{
+    color: #B9314F;
+}
 @media screen and (max-width: 768px){
     .header__hamburger{
         display: block;
