--- a/src/components/home.css
+++ b/src/components/home.css
@@ -8,3 +8,9 @@
         grid-template-columns: 1fr 1fr;
     }
 }
+
+@media screen and (max-width: 432px){
+    .home__movie__container{
+      grid-template-columns: 1fr;
+    }
+}
