project finally completed

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -29,16 +29,16 @@
     position: absolute;
     margin-top: 20px;
     margin-right: 30px;
-    z-index: 2;
+    z-index: 1000;
     cursor: pointer;
     transition: all .5s ease;
 }
 
 .header__nav__container__mobile{
     height: 100vh;
-    background: #B9314F;
+    background: #34495e;
     position: absolute;
-    z-index: 1;
+    z-index: 100;
     width: 70vw;
     top: 0;
     right:0;
@@ -65,7 +65,15 @@
   transition: all .5s ease;
 
 }
-
+.header__nav__list__mobile a{
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: .5s ease;
+}
+.header__nav__list__mobile a:hover{
+    color: #B9314F;
+}
 .header__nav__container ul li a{
     color: #fff;
     text-decoration: none;
