--- a/src/components/header.css
+++ b/src/components/header.css
@@ -4,19 +4,19 @@
 }
 .header__logo img{
     width: 30px;
-    margin: 20px 50px 20px 30px;
+    margin: 30px 50px 20px 30px;
 }
 
 .header__nav__container .header__nav__lists{
     color: #fff;
     list-style: none;
-    margin-top: 30px;
+    margin-top: 35px;
     margin-right: 30px;
 }
 
 .header__nav__container .header__nav__lists .header__nav__list{
     display: inline;
-    padding: 10px;
+    /* padding: 10px; */
     margin-top: 0px;
     cursor: pointer;
 }
@@ -27,7 +27,7 @@
     top: 0;
     right: 0;
     position: absolute;
-    margin-top: 20px;
+    margin-top: 30px;
     margin-right: 30px;
     z-index: 1000;
     cursor: pointer;
@@ -82,6 +82,30 @@
 .header__nav__container ul li a:hover{
     color: #B9314F;
 }
+
+.header__search {
+    flex: 1;
+    display: flex;
+    margin: 30px 50px 20px 30px;
+  }
+  
+  .header__searchInput {
+    height: 12px;
+    padding: 10px;
+    border: none;
+    width: 60%;
+  }
+  .header__searchInput:focus{
+      outline: none;
+  }
+  .header__searchIcon {
+      color: #fff;
+    background-color: #B9314F;
+    padding: 5px;
+    height: 22px !important;
+  }
+
+  
 @media screen and (max-width: 768px){
     .header__hamburger{
         display: block;
